# Asterline

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  justfile
.agents/skills/asterline-team/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: approvals.md  commands.md  configuration.md  releasing.md
docs/releases/: v0.1.2.md
scripts/: format_markdown_tables.py
src/: app.rs  lib.rs  main.rs  types.rs  workflow.rs
src/adapter/: agy_stream.rs  claude_print.rs  claude_stream.rs  cli_pty.rs  codex_exec.rs  codex_stream.rs  fake.rs  gemini_stream.rs  grok_stream.rs  mod.rs  models.rs  parser.rs  process.rs
src/domain/: config.rs  event.rs  mod.rs  mode.rs  team.rs
src/router/: envelope.rs  mod.rs  relay.rs
src/runtime/: agent_runner.rs  approval.rs  events.rs  mod.rs  mode_prompts.rs  pty_sessions.rs  session_registry.rs  supervisor.rs  team_runtime.rs  team_runtime_modes.inc.rs  team_runtime_tests.rs  team_runtime_workflow.inc.rs  workflow.rs
src/store/: mod.rs  sqlite.rs  sqlite_tests.rs
src/tui/: app_state.rs  app_state_tests.rs  attach.rs  chat_view.rs  claude_import.rs  commands.rs  completion.rs  composer.rs  drawer_view.rs  drawers.rs  header.rs  input.rs  keymap.rs  layout.rs  markdown.rs  mod.rs  notify.rs  rollout_import.rs  selection.rs  session_picker.rs  skills.rs  status_indicator.rs  team_builder.rs  team_editor.rs  theme.rs  widgets.rs  workflow_view.rs
tests/: documentation.rs  real_smoke.rs
