[package]
name = "asterline"
version = "0.1.0"
edition = "2024"
default-run = "asterline"

[dependencies]
crossterm = "0.29"
portable-pty = "0.9"
pulldown-cmark = { version = "0.12", default-features = false }
ratatui = "0.30.2"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
textwrap = { version = "0.16", default-features = false, features = ["unicode-width"] }
unicode-width = "0.2"
