[package]
name = "asterline"
version = "0.1.2"
edition = "2024"
default-run = "asterline"
description = "Local-first terminal workspace for coordinating coding agents"
license = "MIT"
repository = "https://github.com/song0705/Asterline"
homepage = "https://github.com/song0705/Asterline"
readme = "README.md"
keywords = ["ai", "cli", "multi-agent", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = { version = "0.29", features = ["osc52"] }
portable-pty = "0.9"
pulldown-cmark = { version = "0.12", default-features = false }
ratatui = "0.30.2"
rusqlite = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
textwrap = { version = "0.16", default-features = false, features = ["unicode-width"] }
unicode-width = "0.2"
